--- a/src/view/AdicionarNota.form
+++ b/src/view/AdicionarNota.form
@@ -29,19 +29,19 @@
                       <EmptySpace min="-2" pref="45" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="nomeProduto" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="idCliente" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="nomeCliente" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="data" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="quantidadeProdutos" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
                           <Component id="txt_data" alignment="0" max="32767" attributes="0"/>
-                          <Component id="txt_idCliente" alignment="0" min="-2" pref="60" max="-2" attributes="0"/>
                           <Group type="102" alignment="1" attributes="0">
                               <Component id="txt_quantidadeProduto" pref="102" max="32767" attributes="0"/>
                               <EmptySpace type="separate" max="-2" attributes="0"/>
                               <Component id="btn_salvar" min="-2" pref="80" max="-2" attributes="0"/>
                           </Group>
+                          <Component id="cmbProduto" min="-2" max="-2" attributes="0"/>
                           <Component id="cmbCliente" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
@@ -59,15 +59,15 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
               <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="txt_idCliente" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="idCliente" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="nomeCliente" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="cmbCliente" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="nomeProduto" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="cmbCliente" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="cmbProduto" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
@@ -105,19 +105,12 @@
         <Property name="text" type="java.lang.String" value="Adicionar Nota"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="txt_idCliente">
+    <Component class="javax.swing.JLabel" name="nomeCliente">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="14" style="0"/>
         </Property>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JLabel" name="idCliente">
-      <Properties>
-        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Tahoma" size="14" style="0"/>
-        </Property>
-        <Property name="text" type="java.lang.String" value="IdCliente"/>
+        <Property name="text" type="java.lang.String" value="Nome do Cliente"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="nomeProduto">
@@ -161,10 +154,25 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txt_quantidadeProdutoActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JComboBox" name="cmbCliente">
+    <Component class="javax.swing.JComboBox" name="cmbProduto">
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cmbClienteActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cmbProdutoActionPerformed"/>
       </Events>
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+      </AuxValues>
+    </Component>
+    <Component class="javax.swing.JComboBox" name="cmbCliente">
+      <Properties>
+        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+          <StringArray count="4">
+            <StringItem index="0" value="Item 1"/>
+            <StringItem index="1" value="Item 2"/>
+            <StringItem index="2" value="Item 3"/>
+            <StringItem index="3" value="Item 4"/>
+          </StringArray>
+        </Property>
+      </Properties>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
       </AuxValues>
